refactor: Sequenced CollectionsのgetFirst()を使用するように変更